--- a/source/_posts/2014-02-23-boy.md
+++ b/source/_posts/2014-02-23-boy.md
@@ -1,11 +1,11 @@
-title: 一个小男孩被冻得瑟瑟发抖，没想到这样的事情发生。太神奇了。
+title: 路遇挨冻男孩，您会伸出援助之手吗？
 date: 2014-02-23 23:02:35
 tags: 故事
 photos: http://img01.taobaocdn.com/imgextra/i1/1110985328/T2Qs2nXvdaXXXXXXXX_!!1110985328.jpg
 
 ---
 
-一个组织致力于帮助孩子, SOS Barnebyer 在挪威奥斯陆举行的社会实验。 他们想看看别人会怎么看待一个孤独的男孩,在寒冷的颤抖。 在历史上一段时间当自私傲慢似乎空前高涨,这个实验显示人类在更柔和的光线。 人们的反应,因为他们通过他在公交车站可能会让你大吃一惊。
+一个组织SOS Barnebyer致力于帮助孩子,在挪威奥斯陆举行的社会实验,他们想看看别人会怎么看待一个孤独的男孩,在寒冷的颤抖。 在历史上一段时间当自私傲慢似乎空前高涨,这个实验显示人类在善良和高尚的一面。
 
 <!-- more -->
 
@@ -13,13 +13,13 @@ photos: http://img01.taobaocdn.com/imgextra/i1/1110985328/T2Qs2nXvdaXXXXXXXX_!!1
 一个隐藏的相机被放置在街对面,捕捉每一个过路人的反应。
 
 ![](http://img01.taobaocdn.com/imgextra/i1/1110985328/T2l9_oXuXXXXXXXXXX_!!1110985328.jpg)
-没有失败,人们会停下来询问颤抖的男孩。
+没有失败,人们会停下来询问挨冻的男孩。
 
 ![](http://img03.taobaocdn.com/imgextra/i3/1110985328/T29JYoXBdXXXXXXXXX_!!1110985328.jpg)
 即使他们花了几秒钟。 
 
 ![](http://img02.taobaocdn.com/imgextra/i2/1110985328/T25QbnXrFaXXXXXXXX_!!1110985328.jpg)
-男孩告诉陌生人,他独自一人,等着见到他的同学。
+男孩告诉陌生人他外套丢了,他独自一人,等着见到他的同学。
 
 ![](http://img03.taobaocdn.com/imgextra/i3/1110985328/T2F6PoXvFXXXXXXXXX_!!1110985328.jpg)
 虽然大多数人会停下来思考该做什么… 
@@ -34,7 +34,7 @@ photos: http://img01.taobaocdn.com/imgextra/i1/1110985328/T2Qs2nXvdaXXXXXXXX_!!1
 另一个小女孩将她的手套递给了男孩。
 
 ![](http://img03.taobaocdn.com/imgextra/i3/1110985328/T2PULnXD0XXXXXXXXX_!!1110985328.jpg)
-这个女孩，对男孩的困境太感动了，她给了他温暖的羊毛外套。
+这个女孩，对男孩的困境太感动了，她给了男孩温暖的羊毛外套。
 
 ![](http://img02.taobaocdn.com/imgextra/i2/1110985328/T2HHLpXqBXXXXXXXXX_!!1110985328.jpg)
 一次又一次，人们帮助那个男孩。
@@ -46,7 +46,7 @@ photos: http://img01.taobaocdn.com/imgextra/i1/1110985328/T2Qs2nXvdaXXXXXXXX_!!1
 他们不认识他，但他们没有犹豫地帮助这个孩子。
 
 ![](http://img02.taobaocdn.com/imgextra/i2/1110985328/T2h.zoXs8XXXXXXXXX_!!1110985328.jpg)
-很难不去微笑，在看到陌生人会做些什么来帮助这个男孩。
+很难不去微笑，在看到陌生人都来帮助这个男孩。
 
 
-人类的命运似乎不那么黯淡，当你看到这样的事情。更多的人比你想象的高大，有慷慨的心。
+人类的命运似乎不那么黯淡，当你看到这样的事情，更多的人比你想象的高大，有慷慨的心。
